progs/tests/for_in/faulty_types.sy
start :: fn {
    a := [1]
    for a in a {
        a + "hej"
    }
    b := {1}
    for b in b {
        b + "hej"
    }
    c := {1:1}
    for c in c {
        c[0] + 1
    }
}

// error: #TypeError(_, _)
// error: #TypeError(_, _)
